2010-04-27  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	* misc/openvas_auth.c (openvas_auth_user_uuid_rules): Emit debug
	message with g_debug, check parameters passed to strcmp, fix bug where
	wrong variable is passed as users rules file name parameter.

2010-04-26  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	* misc/openvas_auth.c: Set the log domain.
	(uuid_file_contents): New function to access file content as uuid.
	(openvas_user_uuid): Clarified doc.
	(openvas_auth_user_uuid_rules): New function, reworked rules access for
	remotely authenticated users.
	(openvas_auth_user_rules): Deprecated in favor of the new
	openvas_auth_user_uuid_rules function.

	* misc/openvas_auth.h: Added proto.

	* misc/ldap_auth.c: Set the log domain.

2010-04-23  Michael Wiegand <michael.wiegand@greenbone.net>

	* misc/pcap.c (getinterfaces): Reworked for loop which broke
	strict-aliasing rules by dereferencing a type-punned pointer. Patch
	was authored by Matthew Mundell.

2010-04-21  Preeti Subramanian <spreeti@secpod.com>

	* misc/pcap.c (v6_getinterfaces): Replaced pcap_findalldevs() with
	getifaddrs().

2010-04-20  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	Mark remotely authenticated Administrators with isadmin flag. Resolved
	several other minor todos.

	* misc/ldap_auth.c (ldap_authenticate): Corrected role check, trigger
	isadmin flag setting / deleting.

	* misc/ldap_auth.h: Removed todos, which were resolved. Improved
	documentation.

	* misc/openvas_auth.c: Improved documentation.
	(openvas_authenticate_classic): Resolved todo and memleak.
	(openvas_user_uuid, openvas_user_uuid_method): Handle error case,
	simplified condition.
	(openvas_is_user_admin): Clarified todo.
	(openvas_set_user_role): Added new parameter, doc. Can optionally take
	the directory where to save the isadmin flag.
	(openvas_auth_store_user_roles): Made todo visible with doxygen.

	* misc/openvas_auth.h (openvas_auth_store_user_roles): Adjusted proto.
