@@ -3,6 +3,8 @@ aclocal.m4
 base/CMakeLists.txt
 base/certificate.c
 base/certificate.h
+base/credentials.c
+base/credentials.h
 base/drop_privileges.c
 base/drop_privileges.h
 base/hash_table_util.c
